--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <section class="nav1bar">
         <nav class="mainnavbar">
             <ul>
-                <img src="Images/hclogo.png" alt="Hamim Choudhury Logo">
+                <img src="hclogo.png" alt="Hamim Choudhury Logo">
                 <li><a href="#">Home</a></li>
                 <li><a href="used.html" target="_blank">Used Vehicles</a></li>
                 <li><a href="dealership.html" target="_blank">Dealership Vehicles</a></li>
@@ -26,7 +26,7 @@
 
     <section class="image1">
         <div class="image1div">
-            <img src="Images/mainbmwimg.jpg" alt="Black BMW">
+            <img src="mainbmwimg.jpg" alt="Black BMW">
         </div>
     </section>
 
