--- a/used.html
+++ b/used.html
@@ -12,7 +12,7 @@
     <section class="nav1bar">
         <nav class="mainnavbar">
             <ul>
-                <img src="Images/hclogo.png" alt="Hamim Choudhury Logo">
+                <img src="hclogo.png" alt="Hamim Choudhury Logo">
                 <li><a href="index.html" target="_blank">Home</a></li>
                 <li><a href="#">Used Vehicles</a></li>
                 <li><a href="dealership.html" target="_blank">Dealership Vehicles</a></li>
@@ -27,7 +27,7 @@
 
     <section class="imageused">
         <div class="imageuseddiv">
-            <img src="Images/usedcars.jpg" alt="Used Car Lot">
+            <img src="usedcars.jpg" alt="Used Car Lot">
         </div>
     </section>
 
