--- a/dealership.html
+++ b/dealership.html
@@ -12,7 +12,7 @@
     <section class="nav1bar">
         <nav class="mainnavbar">
             <ul>
-                <img src="Images/hclogo.png" alt="Hamim Choudhury Logo">
+                <img src="hclogo.png" alt="Hamim Choudhury Logo">
                 <li><a href="index.html" target="_blank">Home</a></li>
                 <li><a href="used.html" target="_blank">Used Vehicles</a></li>
                 <li><a href="#">Dealership Vehicles</a></li>
@@ -26,7 +26,7 @@
 
     <section class="imagedealership">
         <div class="imagedealershipdiv">
-            <img src="Images/dealership.jpg" alt="Dealership Car Lot">
+            <img src="dealership.jpg" alt="Dealership Car Lot">
         </div>
     </section>
 
