--- a/future.html
+++ b/future.html
@@ -12,7 +12,7 @@
     <section class="nav1bar">
         <nav class="mainnavbar">
             <ul>
-                <img src="Images/hclogo.png" alt="Hamim Choudhury Logo">
+                <img src="hclogo.png" alt="Hamim Choudhury Logo">
                 <li><a href="#">Home</a></li>
                 <li><a href="used.html" target="_blank">Used Vehicles</a></li>
                 <li><a href="dealership.html" target="_blank">Dealership Vehicles</a></li>
@@ -26,7 +26,7 @@
 
     <section class="imagefuture">
         <div class="imagefuturediv">
-            <img src="Images/future.jpg" alt="Mercedes's Futuristic Vehicle">
+            <img src="future.jpg" alt="Mercedes's Futuristic Vehicle">
         </div>
     </section>
 
