--- a/showroom.html
+++ b/showroom.html
@@ -12,7 +12,7 @@
     <section class="nav1bar">
         <nav class="mainnavbar">
             <ul>
-                <img src="Images/hclogo.png" alt="Hamim Choudhury Logo">
+                <img src="hclogo.png" alt="Hamim Choudhury Logo">
                 <li><a href="index.html" target="_blank">Home</a></li>
                 <li><a href="used.html" target="_blank">Used Vehicles</a></li>
                 <li><a href="dealership.html" target="_blank">Dealership Vehicles</a></li>
@@ -26,11 +26,11 @@
 
     <section class="image24">
         <div class="image24div">
-            <img src="Images/alfarom.jpg" alt="Alfa Romeo, 2023">
+            <img src="alfarom.jpg" alt="Alfa Romeo, 2023">
         </div>
 
         <div class="image24div">
-            <img src="Images/chevrolet.jpg" alt="Chevrolet, 2023">
+            <img src="chevrolet.jpg" alt="Chevrolet, 2023">
         </div>
     </section>
 
@@ -38,11 +38,11 @@
 
     <section class="image25">
         <div class="image25div">
-            <img src="Images/ford.jpeg" alt="Ford Mustang, 2023">
+            <img src="ford.jpeg" alt="Ford Mustang, 2023">
         </div>
 
         <div class="image25div">
-            <img src="Images/merces.jpeg" alt="Mercedes, 2023">
+            <img src="merces.jpeg" alt="Mercedes, 2023">
         </div>
     
     </section>
@@ -50,11 +50,11 @@
 
     <section class="image26">
         <div class="image26div">
-            <img src="Images/range.jpeg" alt="Range Rover, 2022">
+            <img src="range.jpeg" alt="Range Rover, 2022">
         </div>
 
         <div class="image26div">
-            <img src="Images/tesla.jpeg" alt="Tesla, 2022">
+            <img src="tesla.jpeg" alt="Tesla, 2022">
         </div>
     </section>
 
