--- a/index.html
+++ b/index.html
@@ -76,11 +76,11 @@
 
     <section class="image23">
         <div class="image23div">
-            <img src="Images/hondaimg1.jpeg" alt="Grey Honda">
+            <img src="hondaimg1.jpeg" alt="Grey Honda">
         </div>
         <br>
         <div class="image23div">
-            <img src="Images/dodgeimg1.jpeg" alt="Grey Dodge">
+            <img src="dodgeimg1.jpeg" alt="Grey Dodge">
         </div>
     </section>
 
